# mini-user

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_create_users_and_projects.py
app/: dependencies.py  main.py
app/core/: config.py  database.py  exceptions.py
app/models/: project.py  user.py
app/repositories/: project.py  user.py
app/routers/: projects.py  users.py
app/schemas/: common.py  project.py  user.py
app/services/: project.py  user.py
tests/: conftest.py  test_projects.py  test_users.py
