[project]
name = "mini-user"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "sqlalchemy==2.0.41",
    "greenlet==3.1.1",
    "asyncpg==0.30.0",
    "alembic==1.16.1",
    "pydantic-settings==2.9.1",
    "email-validator==2.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
